Bug 122846 - CRASH: Clicking "Restart Now" after "Use OpenGL for all rendering"->"Apply" in Options Dialog
Summary: CRASH: Clicking "Restart Now" after "Use OpenGL for all rendering"->"Apply" i...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0 target:6.2.0
Keywords:
: 108855 122289 125437 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-01-21 08:43 UTC by himajin100000
Modified: 2019-05-22 11:42 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description himajin100000 2019-01-21 08:43:59 UTC
Description:
see steps to reproduce


Steps to Reproduce:
1. Tools -> Options
2. Click "Use OpenGL for all rendering"
3. Click "Apply"
4. Click "Restart Now"



Actual Results:
Crash

dbgutil build leaves the following message
"Dialog::Execute() - Dialog destroyed in Execute()"

Expected Results:
No Crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.3.0.0.alpha0+ (x64)
Build ID: 6d70e04f66cbeb3aeeb1e9b69d5b201ae3d24747
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-01-19_23:55:14
Locale: ja-JP (ja_JP); UI-Language: en-US
Calc: threaded
Comment 1 baffclan 2019-01-21 08:52:15 UTC
Reproduce with LibO 6.2.0.2 , LibO-master/Win-x86_64@42,Win-x86_64@62-TDF.

Crash report(LibO 6.2.0.2)
br-19e94b44-7309-4562-ab0c-fcbaa23a21a7


Version: 6.2.0.2 (x64)
Build ID: 2ce5217b30a543f7666022df50f0562f82be0cff
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ja-JP (ja_JP); UI-Language: en-US
Calc: threaded

Version: 6.3.0.0.alpha0+ (x64)
Build ID: 1ca409292272632f443733450313de5a82c54a9c
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2018-11-20_20:11:12
Locale: ja-JP (ja_JP); UI-Language: en-US
Calc: threaded

Version: 6.3.0.0.alpha0+ (x64)
Build ID: eca59b6b8a0cf826ac59f77aec9acf045340c23f
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-01-16_03:48:12
Locale: ja-JP (ja_JP); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2019-01-21 11:30:09 UTC
Reproduced in

Version: 6.3.0.0.alpha0+
Build ID: 309ab4419b1d1a4cd0ce939c3a0af4d4af5d4b6b
CPU threads: 16; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-US
Calc: threaded
Comment 3 Xisco Faulí 2019-01-21 11:56:00 UTC
Only happening if the option dialog is called from the start center...
Comment 4 Xisco Faulí 2019-01-21 12:38:50 UTC
@Mike, this is a similar to bug 121180. I thought you might be interested...
Comment 5 Xisco Faulí 2019-01-21 15:16:31 UTC
Same problem is OpenCL is restarted
Comment 6 Xisco Faulí 2019-01-21 16:02:55 UTC
My take -> https://gerrit.libreoffice.org/#/c/66691/
Comment 7 Xisco Faulí 2019-01-21 16:05:05 UTC
*** Bug 122289 has been marked as a duplicate of this bug. ***
Comment 8 Xisco Faulí 2019-01-21 16:05:32 UTC
My commit also fixes bug 122846 :-)
Comment 9 Xisco Faulí 2019-01-21 16:07:31 UTC
*** Bug 108855 has been marked as a duplicate of this bug. ***
Comment 10 Commit Notification 2019-01-22 09:19:18 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/e961e08a3277158d4e3074bfacb8599296d2fa75%5E%21

tdf#122846: Close option dialog if restart is confirmed

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Xisco Faulí 2019-01-22 12:42:59 UTC
Cherry-picked to
6-2: https://gerrit.libreoffice.org/#/c/66732/
6-2-0: https://gerrit.libreoffice.org/#/c/66733/1
Comment 12 Commit Notification 2019-01-22 16:51:29 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/dfa1f1f872c418e89757a3985979b79e94c12fcc%5E%21

tdf#122846: Close option dialog if restart is confirmed

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2019-01-23 16:03:02 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-6-2-0":

https://git.libreoffice.org/core/+/517470b908518fe19661f6337295d75e09dac80e%5E%21

tdf#122846: Close option dialog if restart is confirmed

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Xisco Faulí 2019-05-22 11:42:29 UTC
*** Bug 125437 has been marked as a duplicate of this bug. ***