tdf#122846: Close option dialog if restart is confirmed

use the same logic as 0fa14d58457e9418ff756a0efd66e365c4403a67

Change-Id: I485cb232bb787e176918caf2eee74b0fbb360e47
Reviewed-on: https://gerrit.libreoffice.org/66691
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>